--- a/microcloud/microcloud-provider-product/src/main/resources/application.yml
+++ b/microcloud/microcloud-provider-product/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver # 配置MySQL的驱动程序类
     url: jdbc:mysql://localhost:3306/springcloud?serverTimezone=GMT%2B8 # 数据库连接地址
     username: root # 数据库用户名
-    password: 123456 # 数据库连接密码
+    password: Test1290 # 数据库连接密码
 
 #  # security配置
 #  security:
